syntax = "proto3";
package in.statelogic.grpc;
option java_multiple_files = true;

message GenericCmdRequest {
  uint32 deviceId = 1;
  string cmd = 2;
  repeated string params = 3;
  uint32 repeat = 4;
}